[package]
name = "wevalx"
description = "WASIX fork of weval"
repository = "https://github.com/bytecodealliance/weval"
version = "0.3.2"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"
exclude = ["/npm", "/ci"]

[dependencies]
anyhow = "1.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.11"
fxhash = "0.2"
rayon = "1.8"
indicatif = "0.17"
bincode = "1.3.3"
sha2 = "0.10.8"
sqlite = "0.36.0"
sqlite3-src = { version = "0.6.1", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }

# Path dependency until we publish these to crates.io or get them merged
wizex = { version = "6", path = "../wizex" }
waffle = { path = "../waffle" }
